Adding Velocity.js CDN

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="//cdn.jsdelivr.net/velocity/1.2.2/velocity.min.js"></script>
   <script src="js/zoom.js"></script>
-  <script src="js/velocity.js"></script>
 </body>
 </html>
