Update reference to enhance.js

--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="//cdn.jsdelivr.net/velocity/1.2.2/velocity.min.js"></script>
-  <script src="js/zoom.js"></script>
+  <script src="js/enhance.js"></script>
 </body>
 </html>
